# tabi-share

./: .coderabbit.yaml  .env  .env.example  .env.keys.example  .env.prod  .env.stg  .firebaserc  .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  README.md  biome.json  cspell.json  firebase.json  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  requirements.md
server/: .dockerignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
server/app/: auth.py  config.py  db_connection.py  errors.py  main.py  models.py  observability.py  schemas.py
server/app/cruds/: blocks.py  locations.py  pages.py  trips.py  users.py
server/app/routers/: blocks.py  example.py  pages.py  trip_urls.py  trips.py  users.py
server/app/schemas/: block.py  location.py  notification.py  page.py  trip.py  trip_url.py
server/app/services/: url_extractor.py
server/migrations/: env.py
server/migrations/versions/: 20251115_0557_add_tips_pages_and_blocks_table.py  20260301_0000_alter_blocks_datetime_to_timestamptz.py  20260308_1229_make_detail_nullable_in_trips_and_blocks.py  20260308_1250_make_detail_nullable_in_trips_and_blocks.py  20260414_1910_add_locations_table_and_block_location_.py  20260417_1815_add_website_uri_to_locations.py  20260519_1200_add_dates_to_trips_and_pages.py  20260704_0000_add_timestamps_to_trips.py  20260711_1700_add_notification_tables.py  e073c94733d2_initial.py
server/tests/: conftest.py  test_auth.py  test_errors.py  test_notification_models.py  test_observability.py
server/tests/cruds/: test_blocks.py  (+5 more)
(+278 files in other folders)
